--- a/galeria.html
+++ b/galeria.html
@@ -9,8 +9,8 @@
     <h1>Galeria de Imagenes</h1>
     <div>
     <img src="jp.png" onclick="grande(this.src)">
-    <img src="jp.png" onclick="grande(this.src)">
-    <img src="jp.png" onclick="grande(this.src)">
+    <img src="PlayaElFrances.png" onclick="grande(this.src)">
+    <img src="cristiano.png" onclick="grande(this.src)">
     </div>
     <img id="grande" src="jp.png">
 
