--- a/galeria.html
+++ b/galeria.html
@@ -10,7 +10,7 @@
     <div>
     <img src="jp.png" onclick="grande(this.src)">
     <img src="PlayaElFrances.png" onclick="grande(this.src)">
-    <img src="cristiano.png" onclick="grande(this.src)">
+    <img src="cristiano.PNG" onclick="grande(this.src)">
     </div>
     <img id="grande" src="jp.png">
 
