--- a/galeria.html
+++ b/galeria.html
@@ -19,6 +19,11 @@
 
         }
     </style>
+    <script>
+        function MostrarGrande(src){
+            document.getElementById("grande").src=src;
+        }
+    </script>
 </head>
 <body>
     <h1>Galeria de Imagenes</h1>
