--- a/lab16.html
+++ b/lab16.html
@@ -26,7 +26,7 @@
         <label>Password: </label>
         <input type="password" id="password" name="password">
         <label>Imagen de Perfil</label>
-        <input type="file" id="imagen" name="imagen" accept="imagen" onchange="mostrarImagen()">
+        <input type="file" id="imagen" name="imagen" accept="imagen" onchange="mostrarImagen(event)">
         <img id="ver-imagen" class="ver-imagen">
         <button type="submit">Registrar</button>
         
